UX: Fix layout issues in < 1035px wide windows (take 2)

--- a/common/common.scss
+++ b/common/common.scss
@@ -181,6 +181,10 @@ a.d-toc-close {
   .container.posts .topic-navigation.with-topic-progress {
     align-self: start;
   }
+
+  #post_1 .topic-body {
+    float: none;
+  }
 }
 
 // core sets first child's top margin to 0
